kubernetes/app/myapp-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp-dev
  labels:
    app.kubernetes.io/name: fifa-api
    app.kubernetes.io/instance: dev
    app.kubernetes.io/part-of: fifa-cicd-platform
    environment: dev
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
