kubernetes/app/myapp-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fifa-api
  namespace: myapp-dev
  labels:
    app.kubernetes.io/name: fifa-api
    app.kubernetes.io/instance: dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fifa-api
    app.kubernetes.io/instance: dev
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
